--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --color-primary: #eb2f64;
+  --color-primary: #55eb2f;
   --color-primary-light: #ff3366;
   --color-primary-dark: #ba265d;
   --color-grey-light-1: #faf9f9;
@@ -28,7 +28,6 @@ body {
   font-family: Roboto, sans-serif;
   font-weight: 100;
   line-height: 1.6;
-  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh; }
@@ -53,3 +52,6 @@ h6 {
 
 p {
   font-size: 2rem; }
+
+a {
+  font-size: inherit; }
